--- a/Pages/PáginasSecundarias/Portfolio.html
+++ b/Pages/PáginasSecundarias/Portfolio.html
@@ -53,7 +53,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="../index.html"
+                href="../../index.html"
                 >Home</a
               >
             </li>
